@@ -137,11 +137,12 @@ namespace MonoDevelop.XmlEditor.Gui
 			int pos = completionContext.TriggerOffset;
 			string txt = Editor.GetText (pos - 1, pos);
 			int triggerWordLength = 0;
-			ICompletionDataList list = null;
-			if (txt.Length > 0)
-				list = HandleCodeCompletion ((CodeCompletionContext) completionContext, true, ref triggerWordLength);
 			
-			return list;
+			if (txt.Length > 0) {
+				tracker.UpdateEngine ();
+				return HandleCodeCompletion ((CodeCompletionContext) completionContext, true, ref triggerWordLength);
+			}
+			return null;
 		}
 
 		public override ICompletionDataList HandleCodeCompletion (
@@ -149,6 +150,7 @@ namespace MonoDevelop.XmlEditor.Gui
 		{
 			int pos = completionContext.TriggerOffset;
 			if (pos > 0 && Editor.GetCharAt (pos - 1) == completionChar) {
+				tracker.UpdateEngine ();
 				return HandleCodeCompletion ((CodeCompletionContext) completionContext, 
 				                             false, ref triggerWordLength);
 			}
@@ -158,8 +160,6 @@ namespace MonoDevelop.XmlEditor.Gui
 		protected virtual ICompletionDataList HandleCodeCompletion (
 		    CodeCompletionContext completionContext, bool forced, ref int triggerWordLength)
 		{
-			tracker.UpdateEngine ();
-
 			//FIXME: lines in completionContext are zero-indexed, but ILocation and buffer are 1-indexed.
 			//This could easily cause bugs.
 			int line = completionContext.TriggerLine + 1, col = completionContext.TriggerLineOffset;
@@ -168,8 +168,8 @@ namespace MonoDevelop.XmlEditor.Gui
 
 			// completionChar may be a space even if the current char isn't, when ctrl-space is fired t
 			int currentPosition = buf.CursorPosition - 1;
-			char currentChar = buf.GetCharAt (currentPosition);
-			char previousChar = buf.GetCharAt (currentPosition - 1);
+			char currentChar = currentPosition < 0? ' ' : buf.GetCharAt (currentPosition);
+			char previousChar = currentPosition < 1? ' ' : buf.GetCharAt (currentPosition - 1);
 
 			LoggingService.LogDebug ("Attempting completion for state '{0}'x{1}, previousChar='{2}'," 
 				+ " currentChar='{3}', forced='{4}'", tracker.Engine.CurrentState,
@@ -274,6 +274,11 @@ namespace MonoDevelop.XmlEditor.Gui
 				}
 				
 			}
+			
+//			if (Tracker.Engine.CurrentState is S.XmlFreeState) {
+//				if (line < 3) {
+//				cp.Add ("<?xml version=\"1.0\" encoding=\"UTF-8\" ?>");
+//			}
 			
 			return null;
 		}
